# aiosnowflake

./: .gitignore  .gitlint  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml
sniff/: README.md  pyproject.toml
sniff/sniff/: __init__.py  app.py
tests/queries/: tpch_sf1_allnations.csv  tpch_sf1_allnations.sql  tpch_sf1_customers.csv  tpch_sf1_customers.sql  tpch_sf1_orders.bind.csv  tpch_sf1_orders.bind.json  tpch_sf1_orders.bind.sql
