[tool.poetry]
name = "aiosnowflake"
version = "0.1.0"
description = "asyncio-compatible driver for SnowflakeDB"
authors = ["serramatutu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.5"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
debugpy = "^1.6.7.post1"
pytest = "^7.4.1"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.docformatter]
style = "google"

[tool.black]
line-length = 79
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
py_version = 38
known_first_party = ["aiosnowflake"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
